# pokedex-platform

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2066ed86c71a_add_json_defaults.py  928c7f642f28_init.py  f5e157227502_add_pokedex_fields.py
backend/app/: main.py
backend/app/api/routes/: admin.py  pokemon.py
backend/app/core/: config.py  db.py
backend/app/crud/: pokemon.py
backend/app/models/: pokemon.py
backend/app/schemas/: pokemon.py
backend/app/services/: pokedex_api.py  pokedex_details.py  seed.py  sync.py  xml_export.py
backend/app/tests/: conftest.py  test_capture_and_filters.py  test_export_xml.py  test_health.py  test_pagination_and_ordering.py  test_pokemon_detail_cache.py  test_pokemon_list.py  test_pokemon_pokedex_enrichment.py  test_seed_and_order.py
backend/wheelhouse/: sqlalchemy-2.0.47-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: main.tsx  router.tsx
frontend/src/app/: store.ts
frontend/src/features/pokedex/: api.ts  slice.ts
frontend/src/pages/: page-detail.tsx  page-list.tsx
frontend/src/types/: pokemon-detail.type.ts  pokemon-list-item.type.ts  pokemon-pokedex-detail.type.ts  state.ts
